--- a/eas.json
+++ b/eas.json
@@ -3,6 +3,12 @@
     "version": ">= 3.0.0"
   },
   "build": {
+    "preview": {
+      "android": {
+        "image": "latest",
+        "buildType": "apk"
+      }
+    },
     "production": {
       "android": {
         "image": "latest",
