Ultimos cambios, se agregan preguntas y se arreglan bugs de corazones y ruleta.

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "TriviaFesc",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/triviafesc.png",
     "scheme": "triviafesc",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
